# Chicago_Crime

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.superset.yml  docker-compose.yml  pyproject.toml
chicago_crime/: config.py  logging_config.py
chicago_crime.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
chicago_crime/analytics/: __init__.py  aggregations.py  geo.py  queries.py
chicago_crime/app/: __init__.py  callbacks.py  components.py  layout.py  server.py
chicago_crime/ingest/: __init__.py  build_duckdb.py  ingest_acs.py  ingest_crimes.py  ingest_dimensions.py  lake_inspector.py  parquet_writer.py  schema.py  soda_client.py  state.py
prompts/: README.md
prompts/entries/: 2026-01-03-session-1.md  2026-01-03-session-2.md  2026-01-03-session-3.md  2026-01-03-session-4.md
scripts/: ingest_daily.py  ingest_dims.py  run_app.py  shutdown.sh  startup.sh
superset/: Dockerfile  build_duckdb_container.py  superset-init.sh
tests/: test_acs_dim_join.py  test_build_duckdb.py  test_choropleth_agg.py  test_dedupe.py  test_dim_ingest.py  test_duckdb_queries.py  test_geojson_join_key.py  test_lake_inspector.py  test_population_dim_join.py  test_state.py
