[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chicago_crime"
version = "0.1.0"
description = "Chicago crime data ingestion and analytics"
requires-python = ">=3.11"
dependencies = [
  "dash>=2.14",
  "plotly>=5.18",
  "pandas>=2.1",
  "duckdb>=0.10",
  "pyarrow>=14",
  "requests>=2.31",
  "python-dotenv>=1.0",
  "tenacity>=8.2",
  "pytest>=7.4",
]

[project.optional-dependencies]
dev = ["pytest>=7.4"]

[tool.setuptools.packages.find]
where = ["."]
include = ["chicago_crime*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
